[package]
name = "star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv = "0.24"
idgenerator = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
phf = { version = "0.11", default-features = false, features = ["macros"] } 
