[package]
name = "store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv = "0.24"
idgenerator = "2.0"
sqlparser = "0.35"
rusqlite = { version = "0.29", features = ["bundled", "array"] }
r2d2_sqlite = "0.22"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
